--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.postgresql:postgresql'
-	compileOnly 'org.projectlombok:lombok:1.18.18'
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
+    compileOnly 'org.projectlombok:lombok:1.18.18'
 	annotationProcessor('org.projectlombok:lombok:1.18.18')
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
